; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gt/extr_intel_gt.c_intel_gt_init_early.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gt/extr_intel_gt.c_intel_gt_init_early.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intel_gt = type { i32, i32, i32, i32, i32*, %struct.drm_i915_private* }
%struct.drm_i915_private = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @intel_gt_init_early(%struct.intel_gt* %0, %struct.drm_i915_private* %1) #0 {
  %3 = alloca %struct.intel_gt*, align 8
  %4 = alloca %struct.drm_i915_private*, align 8
  store %struct.intel_gt* %0, %struct.intel_gt** %3, align 8
  store %struct.drm_i915_private* %1, %struct.drm_i915_private** %4, align 8
  %5 = load %struct.drm_i915_private*, %struct.drm_i915_private** %4, align 8
  %6 = load %struct.intel_gt*, %struct.intel_gt** %3, align 8
  %7 = getelementptr inbounds %struct.intel_gt, %struct.intel_gt* %6, i32 0, i32 5
  store %struct.drm_i915_private* %5, %struct.drm_i915_private** %7, align 8
  %8 = load %struct.drm_i915_private*, %struct.drm_i915_private** %4, align 8
  %9 = getelementptr inbounds %struct.drm_i915_private, %struct.drm_i915_private* %8, i32 0, i32 0
  %10 = load %struct.intel_gt*, %struct.intel_gt** %3, align 8
  %11 = getelementptr inbounds %struct.intel_gt, %struct.intel_gt* %10, i32 0, i32 4
  store i32* %9, i32** %11, align 8
  %12 = load %struct.intel_gt*, %struct.intel_gt** %3, align 8
  %13 = getelementptr inbounds %struct.intel_gt, %struct.intel_gt* %12, i32 0, i32 3
  %14 = call i32 @spin_lock_init(i32* %13)
  %15 = load %struct.intel_gt*, %struct.intel_gt** %3, align 8
  %16 = getelementptr inbounds %struct.intel_gt, %struct.intel_gt* %15, i32 0, i32 2
  %17 = call i32 @INIT_LIST_HEAD(i32* %16)
  %18 = load %struct.intel_gt*, %struct.intel_gt** %3, align 8
  %19 = getelementptr inbounds %struct.intel_gt, %struct.intel_gt* %18, i32 0, i32 1
  %20 = call i32 @spin_lock_init(i32* %19)
  %21 = load %struct.intel_gt*, %struct.intel_gt** %3, align 8
  %22 = call i32 @intel_gt_init_hangcheck(%struct.intel_gt* %21)
  %23 = load %struct.intel_gt*, %struct.intel_gt** %3, align 8
  %24 = call i32 @intel_gt_init_reset(%struct.intel_gt* %23)
  %25 = load %struct.intel_gt*, %struct.intel_gt** %3, align 8
  %26 = call i32 @intel_gt_pm_init_early(%struct.intel_gt* %25)
  %27 = load %struct.intel_gt*, %struct.intel_gt** %3, align 8
  %28 = getelementptr inbounds %struct.intel_gt, %struct.intel_gt* %27, i32 0, i32 0
  %29 = call i32 @intel_uc_init_early(i32* %28)
  ret void
}

declare dso_local i32 @spin_lock_init(i32*) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1

declare dso_local i32 @intel_gt_init_hangcheck(%struct.intel_gt*) #1

declare dso_local i32 @intel_gt_init_reset(%struct.intel_gt*) #1

declare dso_local i32 @intel_gt_pm_init_early(%struct.intel_gt*) #1

declare dso_local i32 @intel_uc_init_early(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
